<resources>
    <string name="app_name">Fresh Share</string>
    <string name="sign_in">Sign Up</string>
    <string name="vendors">Vendors</string>
    <string name="food_descriptions">Food Descriptions</string>
    <string name="settings">Settings</string>
    <string name="fresh_share_title">Fresh Share</string>
    <string name="freshShare_email">freshshare@gmail.org</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="future_vendors">Vendors Page goes here</string>
    <string name="future_sign_in">Sign In goes Here</string>
    <string name="future_food_descripts">Food Descriptions go here</string>
    <string name="future_settings">Settings Go Here</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="password">Enter an Image URL!</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_share">Fresh Share</string>
    <string name="steak_fajita_plate">Steak Fajita Plate</string>
    <string name="lorem_ipsum">Nulla odio orci, finibus eget tincidunt ac, suscipit vel leo. Nulla ipsum lectus, auctor eget pellentesque consectetur, vulputate id felis. Suspendisse ac neque nec nisi imperdiet sagittis iaculis in enim. Aliquam eu sodales ante. Nulla lacinia scelerisque imperdiet. Suspendisse efficitur consectetur mattis. Suspendisse ultricies risus eget turpis feugiat malesuada.</string>
    <string name="vendor_info">Vendor Info</string>
    <string name="vendor_email">Vendor Email</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="vendor_food_type">Vendor Food Type</string>
    <string name="vendor_profile_pic">Vendor Profile Pic</string>
    <string name="home">Home</string>
    <string name="product_title">Food Item</string>
    <string name="about">about</string>
    <string name="food_frag_title">Recently Added Foods Available</string>
    <string name="new_vendor_text">New Vendor? Sign Up Below!</string>
    <string name="existing_vendors_text">Participating Vendors</string>
    <string name="welcome_text">Welcome to Fresh Share!</string>
    <string name="update_info_text">Update Your Information</string>
    <string name="pickup_time_reminder">Please select a pickup time reminder:</string>
    <string name="set_reminder">Set Reminder!</string>
    <string name="your_reminder_time_is">"Your reminder time is: "</string>
    <string name="time_selected" />
    <string name="please_select_distance">Please select maximum search distance:</string>
    <string name="please_select_privacy">Please select privacy:</string>
    <string name="privateSelection">Private</string>
    <string name="publicSelection">Public</string>
    <string name="do_you_allow_sharing_of_data_analytics">Do you allow sharing of data analytics?</string>
    <string name="allow_data_analytics">Allow data analytics.</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="email">email</string>
    <string name="edariuspauli_padili_com">edariuspauli@padili.com</string>
    <string name="_9252_santa_clara_ave_ogden_ut_84404">9252 Santa Clara Ave. Ogden, UT 84404</string>
    <string name="food_type">Food Type</string>
    <string name="japanese">Japanese</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_description">Food Description</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="add_food">Add Food</string>
    <string-array name="distance_array">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20 Miles</item>
        <item>Over 20 Miles</item>
    </string-array>
</resources>